# Generated Cmake Pico project file

cmake_minimum_required(VERSION 3.13)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# initalize pico_sdk from installed location
# (note this can come from environment, CMake cache etc)
set(PICO_SDK_PATH "/home/pi/pico/pico-sdk")

# Pull in Raspberry Pi Pico SDK (must be before project)
include(pico_sdk_import.cmake)

project(C-SDK_HTTPS_GET_through_ESP01 C CXX ASM)

# Initialise the Raspberry Pi Pico SDK
pico_sdk_init()

# Add executable. Default name is the project name, version 0.1

add_executable(C-SDK_HTTPS_GET_through_ESP01 C-SDK_HTTPS_GET_through_ESP01.c )

pico_set_program_name(C-SDK_HTTPS_GET_through_ESP01 "C-SDK_HTTPS_GET_through_ESP01")
pico_set_program_version(C-SDK_HTTPS_GET_through_ESP01 "0.1")

pico_enable_stdio_uart(C-SDK_HTTPS_GET_through_ESP01 1)
pico_enable_stdio_usb(C-SDK_HTTPS_GET_through_ESP01 1)

# Add the standard library to the build
target_link_libraries(C-SDK_HTTPS_GET_through_ESP01 pico_stdlib)

pico_add_extra_outputs(C-SDK_HTTPS_GET_through_ESP01)

